[package]
name = "timer"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"
description = "A simple CLI tool for showing a talk timer."
repository = "https://github.com/lukehsiao/timer-rs"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["timer", "cli", "conference"]

[badges]
travis-ci = { repository = "lukehsiao/timer-rs", branch = "master" }

# Maintenance: `status` is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5.0"
pico-args = "0.3.1"

[profile.release]
debug = false
