[package]
name = "talk-timer"
version = "0.2.1"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2021"
description = "A simple command line tool for showing a talk timer."
repository = "https://github.com/lukehsiao/talk-timer"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
keywords = ["talk-timer", "timer", "cli", "conference"]

[badges]
# Maintenance: `status` is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
pico-args = "0.5.0"
yansi = "1.0.1"

[profile.release]
debug = false
